--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "deep-extend": "^0.6.0",
+    "lodash": "^4.17.11",
+    "randomatic": "^3.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.0",
+    "url-parse": "^1.4.3",
     "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
