--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cryptiles": "^4.1.2",
     "deep-extend": "^0.6.0",
     "lodash": "^4.17.11",
+    "macaddress": "^0.2.9",
     "randomatic": "^3.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.0",
+    "sshpk": "^1.13.2",
     "url-parse": "^1.4.3",
     "whatwg-fetch": "^2.0.4"
   },
