--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deep-extend": "^0.6.0",
     "lodash": "^4.17.11",
     "macaddress": "^0.2.9",
+    "merge": "^1.2.1",
     "randomatic": "^3.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
