--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "macaddress": "^0.2.9",
     "merge": "^1.2.1",
     "randomatic": "^3.1.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.7.0",
+    "react-dev-utils": "^5.0.2",
+    "react-dom": "^16.7.0",
     "react-scripts": "1.1.0",
     "sshpk": "^1.13.2",
     "url-parse": "^1.4.3",
@@ -25,6 +26,7 @@
     "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
+    "gh-pages": "^1.1.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
