--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cryptiles": "^4.1.2",
     "deep-extend": "^0.6.0",
+    "extend": "^3.0.2",
     "lodash": "^4.17.11",
     "macaddress": "^0.2.9",
     "merge": "^1.2.1",
