--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.11",
     "macaddress": "^0.2.9",
     "merge": "^1.2.1",
+    "node-forge": "^0.10.0",
     "randomatic": "^3.1.0",
     "react": "^16.7.0",
     "react-dev-utils": "^5.0.2",
