--- a/package.json
+++ b/package.json
@@ -4,22 +4,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "base64url": "^3.0.1",
+    "braces": "^3.0.2",
+    "clean-css": "^4.2.3",
     "cryptiles": "^4.1.2",
     "deep-extend": "^0.6.0",
+    "diff": "^4.0.2",
+    "dot-prop": "^5.3.0",
+    "elliptic": "^6.5.3",
+    "eslint": "^7.9.0",
     "extend": "^3.0.2",
-    "lodash": "^4.17.11",
+    "handlebars": "^4.7.6",
+    "http-proxy": "^1.18.1",
+    "js-yaml": "^3.14.0",
+    "lodash": "^4.17.20",
+    "lodash.template": "^4.5.0",
     "macaddress": "^0.2.9",
+    "mem": "^6.1.1",
     "merge": "^1.2.1",
+    "minimist": "^1.2.5",
+    "mixin-deep": "^2.0.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
+    "nwmatcher": "^1.4.4",
+    "querystringify": "^2.2.0",
     "randomatic": "^3.1.0",
     "react": "^16.7.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.7.0",
     "react-scripts": "1.1.0",
+    "set-value": "^3.0.2",
     "sshpk": "^1.13.2",
+    "stringstream": "^1.0.0",
     "url-parse": "^1.4.3",
-    "whatwg-fetch": "^2.0.4"
+    "websocket-extensions": "^0.1.4",
+    "whatwg-fetch": "^2.0.4",
+    "yargs-parser": "^20.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
