--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "set-value": "^3.0.2",
     "sshpk": "^1.13.2",
     "stringstream": "^1.0.0",
+    "tree-kill": "^1.2.2",
     "url-parse": "^1.4.3",
     "websocket-extensions": "^0.1.4",
     "whatwg-fetch": "^2.0.4",
