--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "elliptic": "^6.5.3",
     "eslint": "^7.9.0",
     "extend": "^3.0.2",
-    "handlebars": "^4.7.6",
+    "handlebars": "^4.7.7",
     "http-proxy": "^1.18.1",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.20",
@@ -37,6 +37,7 @@
     "sshpk": "^1.13.2",
     "stringstream": "^1.0.0",
     "tree-kill": "^1.2.2",
+    "ua-parser-js": "^0.7.28",
     "url-parse": "^1.4.3",
     "websocket-extensions": "^0.1.4",
     "whatwg-fetch": "^2.0.4",
