--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "braces": "^3.0.2",
     "clean-css": "^4.2.3",
     "cryptiles": "^4.1.2",
+    "css-what": "^5.0.1",
     "deep-extend": "^0.6.0",
     "diff": "^4.0.2",
+    "dns-packet": "^5.2.4",
     "dot-prop": "^5.3.0",
     "elliptic": "^6.5.3",
     "eslint": "^7.9.0",
     "extend": "^3.0.2",
+    "glob-parent": "^6.0.0",
     "handlebars": "^4.7.7",
     "http-proxy": "^1.18.1",
     "js-yaml": "^3.14.0",
@@ -26,6 +29,7 @@
     "mixin-deep": "^2.0.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
+    "normalize-url": "^6.0.1",
     "nwmatcher": "^1.4.4",
     "querystringify": "^2.2.0",
     "randomatic": "^3.1.0",
@@ -37,6 +41,7 @@
     "sshpk": "^1.13.2",
     "stringstream": "^1.0.0",
     "tree-kill": "^1.2.2",
+    "trim-newlines": "^4.0.1",
     "ua-parser-js": "^0.7.28",
     "url-parse": "^1.4.3",
     "websocket-extensions": "^0.1.4",
